--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<!--
+Adding copyright
+-->
 <head>
-	<title>Example website</title>
+	<title>An example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
