--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Adding copyright
 -->
 <head>
-	<title>An example website</title>
+	<title>Very respectfull website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,12 @@ Adding copyright
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Outro texto legal aqui
+			sei lá
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Eu 2014</p>
 	</footer>
 </body>
 </html>
