--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Adding copyright
 adding changes before rebasing conflicts
 -->
 <head>
-	<title>A great website</title>
+	<title>A website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,13 @@ adding changes before rebasing conflicts
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- content vai aqui -->
 		<p>
-			Just some content
+			contente content legal legalizado
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Eu 2014</p>
+		<p>&copy; Eu, eu mesmo e 2014</p>
 	</footer>
 </body>
 </html>
