--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 Adding copyright
-adding changes before rebasing conflicts
 -->
 <head>
-	<title>A website</title>
+	<title>A wonderful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
