local: updating simple.html copyright

--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@ Adding copyright
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Eu, eu mesmo e 2014</p>
+		<p>&copy; um copyright de teste</p>
 	</footer>
 </body>
 </html>
