Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Adding copyright
 -->
 <head>
-	<title>A wonderful website</title>
+	<title>Um site bem legalzao</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,7 @@ Adding copyright
 <body>
 	<main class="container">
 		<p>
-			contente content legal legalizado
+			Estou bem contente com esse site
 		</p>
 	</main>
 	<footer class="container">
