changes after git stash

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Adding copyright
 -->
 <head>
-	<title>Um site bem legalzao</title>
+	<title>Um site bem legalzao, do bom</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
